--- a/code/HW-Worksheet-1-yoni.ipynb
+++ b/code/HW-Worksheet-1-yoni.ipynb
@@ -172,9 +172,9 @@
     "\n",
     "Since we want to fit HMMs (and generally use more modern code), we need a different way to access our data.\n",
     "\n",
-    "Fortunatly, there is a \"project_metadata\" folder in the data asset attached to codeocean that contains CSV versions of the what we were previously getting with the <b>AllenSDK</b>.\n",
+    "Fortunately, there is a \"project_metadata\" folder in the data asset attached to CodeOean that contains CSV versions of the what we were previously getting with the <b>AllenSDK</b>.\n",
     "\n",
-    "<i> Note: If you discover that you want <b>AllenSDK</b> for your project you can still run it in a seperate capsuale or virtual environment. This will allow you to keep it from impacting your more modern code! Ask a TA if you need help making this work.</i>\n",
+    "<i> Note: If you discover that you want <b>AllenSDK</b> for your project you can still run it in a separate capsule or virtual environment. This will allow you to keep it from impacting your more modern code! Ask a TA if you need help making this work.</i>\n",
     "\n",
     "</div>"
    ]
@@ -546,7 +546,7 @@
     "\n",
     "<i>Stretch goal:</i> Electrophysiology data is hard to collect. But these mice spent time running this task when there was no ephys recording. Do you think that using these extra sessions will give you a more robust state estimate? Try concatenating data from several sessions with this mouse - does it change the state estimate for the session at hand?\n",
     "\n",
-    "<i>This part might take you a while, so we recomend trying your hand at decoding some electrophysiology first then comming back to this. </i>"
+    "<i>This part might take you a while, so we recommend trying your hand at decoding some electrophysiology first then coming back to this. </i>"
    ]
   },
   {
@@ -623,7 +623,8 @@
    "metadata": {},
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
-    "This function is super handy for getting started with binning:"
+    "\n",
+    "This function is super handy for getting started with binning:\n"
    ]
   },
   {
