--- a/code/Workshop-1.ipynb
+++ b/code/Workshop-1.ipynb
@@ -217,7 +217,7 @@
     "\n",
     "There are both active and passive stimuli in this table. For now, lets only look at active trials. Trying to distinguish between these cases might be a good place to start a project, later! \n",
     "\n",
-    "Read more about the task strucutre here: https://allenswdb.github.io/physiology/ephys/visual-behavior/VB-Neuropixels.html#experiment-design"
+    "Read more about the task structure here: https://allenswdb.github.io/physiology/ephys/visual-behavior/VB-Neuropixels.html#experiment-design"
    ]
   },
   {
@@ -368,7 +368,7 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "Data in the electrodes table are organized by unique channel identifiers. This setup allows us to do a dataframe join on the peak_channel_id from the units table. The result of this operation will be a table that contains all of the unit information, PLUS the electrode information for the key-ed channel.\n",
+    "Data in the electrodes table are organized by unique channel identifiers. This setup allows us to do a DataFrame join on the peak_channel_id from the units table. The result of this operation will be a table that contains all of the unit information, PLUS the electrode information for the key-ed channel.\n",
     "\n"
    ]
   },
@@ -411,15 +411,15 @@
     "\n",
     "Thats a lot of units. But do we trust them all?\n",
     "\n",
-    "The truth is, one of the biggest challenges with ephy analysis sorting units and figuring out which are safe to use. Neuropixels, by virtue of having many contacts near eachother, make it possible to record many units simultaniously. This is great, but it creates an additional challenge of knowing which units are \"good\" for analysis. Because large recordings are almost always sorted algorithmically, selecting good units is particularly important because no human has manually identified which units are safe for further analysis.\n",
+    "The truth is, one of the biggest challenges with ephy analysis sorting units and figuring out which are safe to use. Neuropixels, by virtue of having many contacts near each other, make it possible to record many units simultaneously. This is great, but it creates an additional challenge of knowing which units are \"good\" for analysis. Because large recordings are almost always sorted algorithmically, selecting good units is particularly important because no human has manually identified which units are safe for further analysis.\n",
     "\n",
     "The units table contains many unit QC metrics. Typically, rather than just blindly trusting every output of the automated sorting, we typically impose some constraints on the data. Here are a few examples of useful ones:\n",
     "\n",
-    "+ isi_violations_ratio: what fraction of spikes happen closer together than should be possible for a neuron. If this is too high, its a sign of eather non-neuronal noise or more than one neuron getting merged into a unit.\n",
-    "+ amplitude_cutoff: An estimate of the fraction of spikes missed by the sorter, based on the amplitude historgram for the neuron.\n",
-    "+ presence_ratio: recordings are not 100% static. If the there is mechanical drift, the unit won't be present for the entire session. This adds all sorts of problems for analysis down the road - how can you compare accorss sessions if your unit comes or goes between them? we therefore want to use only units that we can follow through the recording.\n",
+    "+ isi_violations_ratio: what fraction of spikes happen closer together than should be possible for a neuron. If this is too high, its a sign of either non-neuronal noise or more than one neuron getting merged into a unit.\n",
+    "+ amplitude_cutoff: An estimate of the fraction of spikes missed by the sorter, based on the amplitude histogram for the neuron.\n",
+    "+ presence_ratio: recordings are not 100% static. If the there is mechanical drift, the unit won't be present for the entire session. This adds all sorts of problems for analysis down the road - how can you compare across sessions if your unit comes or goes between them? we therefore want to use only units that we can follow through the recording.\n",
     "\n",
-    "Note that exactly which unit QC criteria you use may very based on the questions you ask. Have a question that doesn't really depend on well isolated neurons? Try loosening these criteria. Need to know about the differences of well-isolated units over a long timescale? try tightening them. As a starting place, though, these numbers are reasonable. If you want to get fancy, more information about QC critria can be found here: https://spikeinterface.readthedocs.io/en/stable/modules/qualitymetrics.html "
+    "Note that exactly which unit QC criteria you use may very based on the questions you ask. Have a question that doesn't really depend on well isolated neurons? Try loosening these criteria. Need to know about the differences of well-isolated units over a long timescale? try tightening them. As a starting place, though, these numbers are reasonable. If you want to get fancy, more information about QC criteria can be found in the Data Book: https://allenswdb.github.io/physiology/ephys/visual-coding/vcnp-quality-metrics.html. If you need more information after reading that, the documentation for the packaged used to compute these metrics is here: https://spikeinterface.readthedocs.io/en/stable/modules/qualitymetrics.html"
    ]
   },
   {
@@ -469,8 +469,7 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "### 1.7 Select an area to analyis\n",
-    "\n"
+    "### 1.7 Select an area to analysis"
    ]
   },
   {
@@ -620,7 +619,7 @@
     "\n",
     "Great! We have a neuron that responds to the stimulus!\n",
     "\n",
-    "But remember our goal here- we want to know if we can decode the difference between stimuli from this neuron. With that in mind, lets try seperating out the different stimulus identities.\n"
+    "But remember our goal here- we want to know if we can decode the difference between stimuli from this neuron. With that in mind, lets try separating out the different stimulus identities.\n"
    ]
   },
   {
@@ -757,7 +756,7 @@
     "\n",
     "One important thing to note here is that we are passing labeled data in an effort to learn the distinction between classes. This is a great way to build a model, but it comes with risks- because we are training our model using these data, it would not be fair to evaluate model performance using the same data.\n",
     "\n",
-    "In cases where we don't want to go out and colect more data, we can split our data into \"training\" and \"testing.\" <b>Sklearn</b> provides a handy function for doing this called \"train_test_spilt.\"\n"
+    "Because we usually can't just go collect more data, we can split our data into \"training\" and \"testing.\" <b>Sklearn</b> provides a handy function for doing this called \"train_test_spilt.\"\n"
    ]
   },
   {
@@ -843,9 +842,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# numbers to test\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m tmp_bins \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m,\u001b[38;5;241m20.15\u001b[39m,\u001b[38;5;241m.15\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Plot our origional distributions\u001b[39;00m\n\u001b[1;32m      5\u001b[0m fig,ax \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(nrows \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# numbers to test\n",
     "tmp_bins = np.arange(-10,20.15,.15)\n",
@@ -1027,9 +1038,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'plt' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mmatplotlib\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mmpl\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m prop_cycle \u001b[38;5;241m=\u001b[39m \u001b[43mplt\u001b[49m\u001b[38;5;241m.\u001b[39mrcParams[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124maxes.prop_cycle\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m      3\u001b[0m color_list \u001b[38;5;241m=\u001b[39m [entry[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcolor\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m entry \u001b[38;5;129;01min\u001b[39;00m prop_cycle]\n\u001b[1;32m      5\u001b[0m input_spike_count \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marange(\u001b[38;5;241m0\u001b[39m,np\u001b[38;5;241m.\u001b[39mmax(spike_count),\u001b[38;5;241m.1\u001b[39m) \n",
+      "\u001b[0;31mNameError\u001b[0m: name 'plt' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib as mpl\n",
     "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
@@ -1202,7 +1225,7 @@
    "source": [
     "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "\n",
-    "With that said, lets use decoding to take a hard look at the timescale of VISPs' encoding of stimulus identity. \n",
+    "With that said, lets use decoding to take a hard look at the timescale of VISps' encoding of stimulus identity. \n",
     "\n",
     "Doing this is going to require a fair bit of data wrangling. Just as before, we needed to get the number of spikes per trial. But if we are looking over time and over neurons, we need to get the number of spikes for each neuron on each trial. \n",
     "\n",
@@ -1743,7 +1766,9 @@
     "\n",
     "However, there are cases where it can make a big difference. Rescaling is, for example, an essential part of principle components analysis- without it large values would dominate the resulting PCs.\n",
     "\n",
-    "Even if rescaling won't change the predictions of your model, it can make it easier to understand. Model weights will scale with firing rate. As a result, if you want to compare the impacts of different units with different weight on your linear model, rescaling can make these weights interpretable."
+    "Even if rescaling won't change the predictions of your model, it can make it easier to understand. Model weights will scale with firing rate. As a result, if you want to compare the impacts of different units with different weight on your linear model, rescaling can make these weights interpretable. \n",
+    "\n",
+    "P.S. If this interests you, there is a chance to try interpreting decoder weights in the homework!"
    ]
   },
   {
@@ -1850,7 +1875,7 @@
     "\n",
     "<h3> Try decoding change images. </h3> \n",
     "\n",
-    "Can you plot the timecourse of change encoding?\n"
+    "Can you plot the time-course of change encoding?\n"
    ]
   },
   {
@@ -1936,7 +1961,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
