Edits after conversation with michael

--- a/code/older_codes/Workshop-2 - Solutions.ipynb
+++ b/code/older_codes/Workshop-2 - Solutions.ipynb
@@ -4257,7 +4257,7 @@
     "            out_models[k] = None  # or store (mu, Sigma) if you like\n",
     "            continue\n",
     "\n",
-    "        # K >= 2: normal Dynamax path\n",
+    " ƒT       # K >= 2: normal Dynamax path\n",
     "        k_key = jr.fold_in(key, k)\n",
     "        this_model = deepcopy(model)\n",
     "        params, props = this_model.initialize(key=k_key, method='kmeans', emissions=y_train)\n",
