Added HW-Worksheet-1-yoni-shawn.ipynb; edited HW-Worksheet-1-yoni.ipynb

--- a/code/HW-Worksheet-1-yoni.ipynb
+++ b/code/HW-Worksheet-1-yoni.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "716b16c0-4d82-4bfc-8348-f1198815d01f",
    "metadata": {},
    "outputs": [],
@@ -102,20 +102,12 @@
     "\n",
     "from dynamax.hidden_markov_model import GaussianHMM\n",
     "\n",
-    "# HMM-related imports from JAX, Dynamax, and TensorFlow Probability\n",
+    "# HMM-related imports from JAX, Dynamax\n",
     "from functools import partial\n",
     "import jax.numpy as jnp\n",
     "import jax.random as jr\n",
     "from dynamax.hidden_markov_model import GaussianHMM\n",
-    "import tensorflow_probability.substrates.jax.distributions as tfd\n",
     "from dynamax.utils.utils import find_permutation\n",
-    "\n",
-    "# Additional HMM variants and plotting utilities from Dynamax\n",
-    "from dynamax.hidden_markov_model import (\n",
-    "    DiagonalGaussianHMM,\n",
-    "    SphericalGaussianHMM,\n",
-    "    SharedCovarianceGaussianHMM\n",
-    ")\n",
     "\n",
     "from dynamax.utils.plotting import CMAP, COLORS, white_to_color_cmap"
    ]
@@ -133,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6ed9ad6e-3360-4df4-8288-78901761862c",
    "metadata": {},
    "outputs": [],
@@ -181,10 +173,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d61ce802-9d59-4787-9e4e-32387f8b4713",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ecephys_session_id</th>\n",
+       "      <th>behavior_session_id</th>\n",
+       "      <th>date_of_acquisition</th>\n",
+       "      <th>equipment_name</th>\n",
+       "      <th>session_type</th>\n",
+       "      <th>mouse_id</th>\n",
+       "      <th>genotype</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>project_code</th>\n",
+       "      <th>age_in_days</th>\n",
+       "      <th>unit_count</th>\n",
+       "      <th>probe_count</th>\n",
+       "      <th>channel_count</th>\n",
+       "      <th>structure_acronyms</th>\n",
+       "      <th>image_set</th>\n",
+       "      <th>prior_exposures_to_image_set</th>\n",
+       "      <th>session_number</th>\n",
+       "      <th>experience_level</th>\n",
+       "      <th>prior_exposures_to_omissions</th>\n",
+       "      <th>file_id</th>\n",
+       "      <th>abnormal_histology</th>\n",
+       "      <th>abnormal_activity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1043752325</td>\n",
+       "      <td>1043788445</td>\n",
+       "      <td>2020-08-17 15:21:49.664000+00:00</td>\n",
+       "      <td>NP.1</td>\n",
+       "      <td>EPHYS_1_images_G_5uL_reward</td>\n",
+       "      <td>506940</td>\n",
+       "      <td>Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NeuropixelVisualBehavior</td>\n",
+       "      <td>266</td>\n",
+       "      <td>2207.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2304.0</td>\n",
+       "      <td>['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...</td>\n",
+       "      <td>G</td>\n",
+       "      <td>14</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Familiar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>869</td>\n",
+       "      <td>['Right Cortex']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1044385384</td>\n",
+       "      <td>1044408432</td>\n",
+       "      <td>2020-08-19 14:47:08.574000+00:00</td>\n",
+       "      <td>NP.1</td>\n",
+       "      <td>EPHYS_1_images_G_5uL_reward</td>\n",
+       "      <td>524761</td>\n",
+       "      <td>wt/wt</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NeuropixelVisualBehavior</td>\n",
+       "      <td>151</td>\n",
+       "      <td>2179.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>['CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg', 'LGv...</td>\n",
+       "      <td>G</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Familiar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>870</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1044389060</td>\n",
+       "      <td>1044412710</td>\n",
+       "      <td>2020-08-19 15:24:05.052000+00:00</td>\n",
+       "      <td>NP.0</td>\n",
+       "      <td>EPHYS_1_images_G_5uL_reward</td>\n",
+       "      <td>510589</td>\n",
+       "      <td>Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NeuropixelVisualBehavior</td>\n",
+       "      <td>242</td>\n",
+       "      <td>1645.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2304.0</td>\n",
+       "      <td>['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...</td>\n",
+       "      <td>G</td>\n",
+       "      <td>55</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Familiar</td>\n",
+       "      <td>0</td>\n",
+       "      <td>871</td>\n",
+       "      <td>['Thalamus']</td>\n",
+       "      <td>[8899]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1044594870</td>\n",
+       "      <td>1044624428</td>\n",
+       "      <td>2020-08-20 15:03:56.422000+00:00</td>\n",
+       "      <td>NP.1</td>\n",
+       "      <td>EPHYS_1_images_H_5uL_reward</td>\n",
+       "      <td>524761</td>\n",
+       "      <td>wt/wt</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NeuropixelVisualBehavior</td>\n",
+       "      <td>152</td>\n",
+       "      <td>2103.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1920.0</td>\n",
+       "      <td>['CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg', 'HPF...</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Novel</td>\n",
+       "      <td>1</td>\n",
+       "      <td>872</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1044597824</td>\n",
+       "      <td>1044626338</td>\n",
+       "      <td>2020-08-20 15:13:49.880000+00:00</td>\n",
+       "      <td>NP.0</td>\n",
+       "      <td>EPHYS_1_images_H_5uL_reward</td>\n",
+       "      <td>510589</td>\n",
+       "      <td>Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NeuropixelVisualBehavior</td>\n",
+       "      <td>243</td>\n",
+       "      <td>1948.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2304.0</td>\n",
+       "      <td>['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...</td>\n",
+       "      <td>H</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Novel</td>\n",
+       "      <td>1</td>\n",
+       "      <td>873</td>\n",
+       "      <td>['Thalamus']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ecephys_session_id  behavior_session_id               date_of_acquisition  \\\n",
+       "0          1043752325           1043788445  2020-08-17 15:21:49.664000+00:00   \n",
+       "1          1044385384           1044408432  2020-08-19 14:47:08.574000+00:00   \n",
+       "2          1044389060           1044412710  2020-08-19 15:24:05.052000+00:00   \n",
+       "3          1044594870           1044624428  2020-08-20 15:03:56.422000+00:00   \n",
+       "4          1044597824           1044626338  2020-08-20 15:13:49.880000+00:00   \n",
+       "\n",
+       "  equipment_name                 session_type  mouse_id  \\\n",
+       "0           NP.1  EPHYS_1_images_G_5uL_reward    506940   \n",
+       "1           NP.1  EPHYS_1_images_G_5uL_reward    524761   \n",
+       "2           NP.0  EPHYS_1_images_G_5uL_reward    510589   \n",
+       "3           NP.1  EPHYS_1_images_H_5uL_reward    524761   \n",
+       "4           NP.0  EPHYS_1_images_H_5uL_reward    510589   \n",
+       "\n",
+       "                                        genotype sex  \\\n",
+       "0  Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   M   \n",
+       "1                                          wt/wt   F   \n",
+       "2  Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   M   \n",
+       "3                                          wt/wt   F   \n",
+       "4  Vip-IRES-Cre/wt;Ai32(RCL-ChR2(H134R)_EYFP)/wt   M   \n",
+       "\n",
+       "               project_code  age_in_days  unit_count  probe_count  \\\n",
+       "0  NeuropixelVisualBehavior          266      2207.0          6.0   \n",
+       "1  NeuropixelVisualBehavior          151      2179.0          5.0   \n",
+       "2  NeuropixelVisualBehavior          242      1645.0          6.0   \n",
+       "3  NeuropixelVisualBehavior          152      2103.0          5.0   \n",
+       "4  NeuropixelVisualBehavior          243      1948.0          6.0   \n",
+       "\n",
+       "   channel_count                                 structure_acronyms image_set  \\\n",
+       "0         2304.0  ['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...         G   \n",
+       "1         1920.0  ['CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg', 'LGv...         G   \n",
+       "2         2304.0  ['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...         G   \n",
+       "3         1920.0  ['CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg', 'HPF...         H   \n",
+       "4         2304.0  ['APN', 'CA1', 'CA3', 'DG-mo', 'DG-po', 'DG-sg...         H   \n",
+       "\n",
+       "   prior_exposures_to_image_set  session_number experience_level  \\\n",
+       "0                            14               1         Familiar   \n",
+       "1                            30               1         Familiar   \n",
+       "2                            55               1         Familiar   \n",
+       "3                             0               2            Novel   \n",
+       "4                             0               2            Novel   \n",
+       "\n",
+       "   prior_exposures_to_omissions  file_id abnormal_histology abnormal_activity  \n",
+       "0                             0      869   ['Right Cortex']               NaN  \n",
+       "1                             0      870                NaN               NaN  \n",
+       "2                             0      871       ['Thalamus']            [8899]  \n",
+       "3                             1      872                NaN               NaN  \n",
+       "4                             1      873       ['Thalamus']               NaN  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ephys_session_table = pd.read_csv('/data/visual-behavior-neuropixels/project_metadata/ecephys_sessions.csv')\n",
     "ephys_session_table.head()"
@@ -203,15 +426,26 @@
     "\n",
     "Choose one like a good fit for your groups interest. There is no rule that everyone in your group needs to choose the same session - it could be interesting to compare!\n",
     "\n",
-    "The \"starter\" code before is written with a particular session as an example. If this session suite your needs you are welcome to start there, but at least chat that it is what your really want.\n"
+    "The \"starter\" code before is written with a particular session as an example. In this example, the mouse shows clear task-engaged and task-disengaged behavior states. If this session suite your needs you are welcome to start there, but feel free to explore other sessions.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "cd4d27a4-6757-42bf-917d-8e503ab2cc40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "75"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# EXAMPLE: Find sessions with VISp recordings.\n",
     "VISp_sessions = []\n",
@@ -223,23 +457,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d9aa49fa-31a9-4ae8-8bf5-020997531057",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Write your code to choose your own session here\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "49e7e534",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/data/visual-behavior-neuropixels/behavior_ecephys_sessions/1139846596/ecephys_session_1139846596.nwb\n"
+     ]
+    }
+   ],
    "source": [
     "# Load a session!\n",
-    "example_session =1069461581 # Please! Pick different session!\n",
+    "# For convenience, here are two example sessions with task-engaged and disengaged states: \n",
+    "# example_session_ids = [1139846596, 1152811536]\n",
+    "example_session =1139846596 # Please! Pick different session!\n",
     "this_session = str(example_session)\n",
     "this_filename = f'ecephys_session_{this_session}.nwb'\n",
     "nwb_path = data_root/'visual-behavior-neuropixels'/'behavior_ecephys_sessions'/this_session/this_filename\n",
