HW rearange, added a bonus problem

--- a/code/HW-Worksheet.ipynb
+++ b/code/HW-Worksheet.ipynb
@@ -2730,9 +2730,35 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "0591bce8-8591-4eb7-a636-581f76b79587",
+   "metadata": {},
+   "source": [
+    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #DFF0D8; \">\n",
+    "\n",
+    "#### Idea (5) \n",
+    "\n",
+    "The HMMs we have been using for this session are great, but they are complicated models. If possible, it is often best to use the simplest model possible. Today, you learned about two other unsupervised clustering methods: K-Means and Gaussian Mixture models. Try fitting each of these to your behavior session. How do the results differ from the fit of an HMM?\n",
+    "\n",
+    "<i> Hint: <b>sklearn</b> has prefabricated structures for fitting both KMeans and Gaussian Mixture models. These are the easiest way to get started (though K-Means is fun to build from scratch if you are feeling like a challenge!).</i>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c1b1c4cb-1abd-4dae-bcc1-5621149cbb03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hint:\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.mixture import GaussianMixture\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ed396fc-b744-4cd6-a77a-41911afa4565",
+   "id": "44254243-5112-4868-95d4-b26b903e9b73",
    "metadata": {},
    "outputs": [],
    "source": []
